nixos: Add missing packages

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -297,6 +297,7 @@ bandit:
   debian: [bandit]
   fedora: [bandit]
   gentoo: [dev-python/bandit]
+  nixos: [bandit]
   opensuse: [python3-bandit]
   osx:
     homebrew:
@@ -461,6 +462,7 @@ castxml:
   debian: [castxml]
   fedora: [castxml]
   macports: [castxml]
+  nixos: [castxml]
   ubuntu: [castxml]
 catch2:
   alpine: [catch2]
@@ -655,6 +657,7 @@ collectd:
   debian: [collectd]
   fedora: [collectd]
   gentoo: [app-metrics/collectd]
+  nixos: [collectd]
   ubuntu: [collectd]
 collectd-utils:
   debian: [collectd-utils]
@@ -662,6 +665,7 @@ collectd-utils:
   ubuntu: [collectd-utils]
 comedi:
   debian: [libcomedi-dev]
+  nixos: [comedilib]
   ubuntu: [libcomedi-dev]
 coreutils:
   arch: [coreutils]
@@ -778,6 +782,7 @@ dcraw:
   debian: [dcraw]
   fedora: [dcraw]
   gentoo: [media-gfx/dcraw]
+  nixos: [dcraw]
   opensuse: [dcraw]
   ubuntu: [dcraw]
 debhelper:
@@ -798,6 +803,7 @@ devscripts:
   debian: [devscripts]
   fedora: [devscripts]
   gentoo: [dev-util/checkbashisms]
+  nixos: [debian-devscripts]
   ubuntu: [devscripts]
 dfu-util:
   arch: [dfu-util]
@@ -1092,6 +1098,7 @@ flawfinder:
   debian: [flawfinder]
   fedora: [flawfinder]
   gentoo: [dev-util/flawfinder]
+  nixos: [flawfinder]
   ubuntu: [flawfinder]
 flex:
   arch: [flex]
@@ -1141,6 +1148,7 @@ fluidsynth:
   arch: [fluidsynth]
   debian: [fluidsynth]
   fedora: [fluidsynth]
+  nixos: [fluidsynth]
   opensuse: [fluidsynth]
   rhel: [fluidsynth]
   ubuntu: [fluidsynth]
@@ -1162,6 +1170,7 @@ fonts-noto:
   debian: [fonts-noto]
   fedora: [google-noto-sans-mono-fonts, google-noto-serif-fonts]
   gentoo: [media-fonts/noto]
+  nixos: [noto-fonts]
   ubuntu: [fonts-noto]
 fonts-roboto:
   arch: [ttf-roboto]
@@ -1173,6 +1182,7 @@ fping:
   debian: [fping]
   fedora: [fping]
   gentoo: [net-analyzer/fping]
+  nixos: [fping]
   ubuntu: [fping]
 freeimage:
   arch: [freeimage]
@@ -1216,6 +1226,7 @@ ftdi-eeprom:
 fxload:
   debian: [fxload]
   fedora: [fxload]
+  nixos: [fxload]
   ubuntu: [fxload]
 g++-10:
   debian:
@@ -1327,6 +1338,7 @@ gcovr:
   debian: [gcovr]
   fedora: [gcovr]
   gentoo: [dev-util/gcovr]
+  nixos: [gcovr]
   ubuntu: [gcovr]
 gdal-bin:
   arch: [gdal]
@@ -1444,6 +1456,7 @@ gitk:
   arch: [git]
   debian: [gitk]
   fedora: [gitk]
+  nixos: [gitFull]
   ubuntu: [gitk]
 gksu:
   debian: [gksu]
@@ -1459,6 +1472,7 @@ glpk:
   debian: [libglpk-dev]
   fedora: [glpk-devel]
   gentoo: [sci-mathematics/glpk]
+  nixos: [glpk]
   rhel: [glpk-devel]
   ubuntu: [libglpk-dev]
 glslang-dev:
@@ -1565,6 +1579,7 @@ gperf:
   debian: [gperf]
   fedora: [gperf]
   gentoo: [dev-util/gperf]
+  nixos: [gperf]
   osx:
     homebrew:
       packages: [gperf]
@@ -1974,6 +1989,7 @@ haproxy:
   debian: [haproxy]
   fedora: [haproxy]
   gentoo: [net-proxy/haproxy]
+  nixos: [haproxy]
   ubuntu: [haproxy]
 hddtemp:
   arch: [hddtemp]
@@ -2322,6 +2338,7 @@ inxi:
   debian: [inxi]
   fedora: [inxi]
   gentoo: [sys-apps/inxi]
+  nixos: [inxi]
   opensuse: [inxi]
   osx:
     homebrew:
@@ -2508,6 +2525,7 @@ libalglib-dev:
   debian: [libalglib-dev]
   fedora: [alglib-devel]
   gentoo: [sci-libs/alglib]
+  nixos: [alglib]
   ubuntu: [libalglib-dev]
 libann-dev:
   debian: [libann-dev]
@@ -3404,6 +3422,7 @@ libepoxy-dev:
   arch: [libepoxy]
   debian: [libepoxy-dev]
   fedora: [libepoxy-devel]
+  nixos: [libepoxy]
   opensuse: [libepoxy-devel]
   rhel: [libepoxy-devel]
   ubuntu: [libepoxy-dev]
@@ -3454,6 +3473,7 @@ libevent-dev:
   arch: [libevent]
   debian: [libevent-dev]
   fedora: [libevent-devel]
+  nixos: [libevent]
   opensuse: [libevent-devel]
   rhel: [libevent-devel]
   ubuntu: [libevent-dev]
@@ -3469,6 +3489,7 @@ libext2fs-dev:
   arch: [e2fsprogs]
   debian: [libext2fs-dev]
   fedora: [e2fsprogs-devel]
+  nixos: [e2fsprogs]
   opensuse: [libext2fs-devel]
   rhel: [e2fsprogs-devel]
   ubuntu: [libext2fs-dev]
@@ -3663,6 +3684,7 @@ libftgl-dev:
   debian: [libftgl-dev]
   fedora: [ftgl-devel]
   gentoo: [media-libs/ftgl]
+  nixos: [ftgl]
   ubuntu: [libftgl-dev]
 libfyaml-dev:
   alpine: [libfyaml-dev]
@@ -3735,6 +3757,7 @@ libgeographiclib-dev:
     wheezy: [libgeographiclib-dev]
   fedora: [GeographicLib-devel]
   gentoo: [sci-geosciences/geographiclib]
+  nixos: [geographiclib]
   ubuntu: [libgeographiclib-dev]
 libgeos++-dev:
   arch: [geos]
@@ -7130,6 +7153,7 @@ mpfr:
   debian: [libmpfr-dev]
   fedora: [mpfr]
   gentoo: [dev-libs/mpfr]
+  nixos: [mpfr]
   ubuntu: [libmpfr-dev]
 mpg123:
   arch: [mpg123]
@@ -7163,6 +7187,7 @@ msr-tools:
   debian: [msr-tools]
   fedora: [msr-tools]
   gentoo: [sys-apps/msr-tools]
+  nixos: [msr-tools]
   opensuse: [msr-tools]
   rhel: [msr-tools]
   ubuntu: [msr-tools]
@@ -7181,6 +7206,7 @@ nanoflann:
   debian:
     '*': [libnanoflann-dev]
     buster: null
+  nixos: [nanoflann]
   ubuntu:
     '*': [libnanoflann-dev]
     bionic: null
@@ -7201,6 +7227,7 @@ nbtscan:
   debian: [nbtscan]
   fedora: [nbtscan]
   gentoo: [net-analyzer/nbtscan]
+  nixos: [nbtscan]
   ubuntu: [nbtscan]
 net-tools:
   arch: [net-tools]
@@ -7314,6 +7341,7 @@ nvidia-cg:
   debian: [nvidia-cg-toolkit]
   fedora: [Cg]
   gentoo: [media-gfx/nvidia-cg-toolkit]
+  nixos: [nvidia_cg_toolkit]
   ubuntu: [nvidia-cg-toolkit]
 nvidia-cuda:
   arch: [cuda]
@@ -7350,6 +7378,7 @@ octave:
   ubuntu: [octave]
 odb:
   debian: [odb]
+  nixos: [libodb]
   ubuntu:
     '*': [odb]
 omniidl:
@@ -7371,6 +7400,7 @@ opencascade:
     stretch: [liboce-visualization-dev]
   fedora: [opencascade-devel]
   gentoo: [sci-libs/opencascade]
+  nixos: [opencascade]
   ubuntu:
     bionic: [liboce-visualization-dev]
     focal: [libocct-data-exchange-dev, libocct-draw-dev]
@@ -7556,6 +7586,7 @@ pigz:
   debian: [pigz]
   fedora: [pigz]
   gentoo: [app-arch/pigz]
+  nixos: [pigz]
   ubuntu: [pigz]
 pkg-config:
   alpine: [pkgconf]
@@ -7631,6 +7662,7 @@ postfix:
   arch: [postfix]
   debian: [postfix]
   fedora: [postfix]
+  nixos: [postfix]
   opensuse: [postfix]
   rhel: [postfix]
   ubuntu: [postfix]
@@ -7652,6 +7684,7 @@ postgresql-client:
   debian: [postgresql-client]
   fedora: [postgresql]
   gentoo: [dev-db/postgresql]
+  nixos: [postgresql]
   ubuntu: [postgresql-client]
 postgresql-postgis:
   debian:
@@ -7659,6 +7692,7 @@ postgresql-postgis:
     stretch: [postgresql-9.6-postgis-2.3, postgresql-contrib, postgresql-server-dev-all]
   fedora: [postgis]
   gentoo: [dev-db/postgis, =dev-db/postgresql-9*]
+  nixos: [postgresqlPackages.postgis]
   ubuntu:
     bionic: [postgresql-10-postgis-2.4, postgresql-contrib, postgresql-server-dev-all]
     focal: [postgresql-12-postgis-3, postgresql-contrib, postgresql-server-dev-all]
@@ -7666,6 +7700,7 @@ potrace:
   arch: [potrace]
   debian: [potrace]
   fedora: [potrace]
+  nixos: [potrace]
   rhel: [potrace]
   ubuntu: [potrace]
 powertop:
@@ -8117,6 +8152,7 @@ rsync:
 rsyslog:
   debian: [rsyslog]
   fedora: [rsyslog]
+  nixos: [rsyslog]
   ubuntu: [rsyslog]
 rt-tests:
   arch: [rt-tests]
@@ -8324,6 +8360,7 @@ slime:
   debian: [slime]
   fedora: [emacs-slime]
   gentoo: [app-emacs/slime]
+  nixos: [emacsPackages.slime]
   ubuntu: [slime]
 smartmontools:
   arch: [smartmontools]
@@ -8398,6 +8435,7 @@ speech-dispatcher:
   debian: [speech-dispatcher]
   fedora: [speech-dispatcher]
   gentoo: [app-accessibility/speech-dispatcher]
+  nixos: [speechd]
   ubuntu: [speech-dispatcher]
 speex:
   arch: [speex]
@@ -8508,6 +8546,7 @@ swi-prolog:
   debian: [swi-prolog]
   fedora: [pl]
   gentoo: [dev-lang/swi-prolog]
+  nixos: [swiProlog]
   ubuntu: [swi-prolog]
 swi-prolog-clib:
   arch: [swi-prolog]
@@ -8582,6 +8621,7 @@ systemd:
   debian: [systemd]
   fedora: [systemd]
   gentoo: [sys-apps/systemd]
+  nixos: [systemd]
   opensuse: [systemd]
   osx:
     homebrew:
