add doc and source entries
Signed-off-by: Alberto Soragna <alberto.soragna@gmail.com>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1083,6 +1083,10 @@ repositories:
       version: main
     status: maintained
   create3_examples:
+    doc:
+      type: git
+      url: https://github.com/iRobotEducation/create3_examples.git
+      version: jazzy
     release:
       packages:
       - create3_coverage
@@ -1095,6 +1099,10 @@ repositories:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/create3_examples-release.git
       version: 1.0.0-1
+    source:
+      type: git
+      url: https://github.com/iRobotEducation/create3_examples.git
+      version: jazzy
     status: developed
   create3_sim:
     release:
