--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7662,7 +7662,7 @@ repositories:
     source:
       type: git
       url: https://github.com/IntelLabs/scenario_execution.git
-      version: main
+      version: jazzy
     status: developed
   sdformat_urdf:
     doc:
