--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -9130,7 +9130,7 @@ repositories:
     source:
       type: git
       url: https://github.com/IntelLabs/scenario_execution.git
-      version: main
+      version: humble
     status: maintained
   schunk_svh_library:
     doc:
