--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7400,7 +7400,7 @@ opencascade:
     stretch: [liboce-visualization-dev]
   fedora: [opencascade-devel]
   gentoo: [sci-libs/opencascade]
-  nixos: [opencascade]
+  nixos: [opencascade-occt]
   ubuntu:
     bionic: [liboce-visualization-dev]
     focal: [libocct-data-exchange-dev, libocct-draw-dev]
