scenario_execution: 1.2.0-1 in 'humble/distribution.yaml' [bloom] (#43021)
* scenario_execution: 1.2.0-1 in 'humble/distribution.yaml' [bloom]

* Update distribution.yaml

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -9111,10 +9111,31 @@ repositories:
       version: ros2
     status: maintained
   scenario_execution:
+    doc:
+      type: git
+      url: https://github.com/IntelLabs/scenario_execution.git
+      version: humble
+    release:
+      packages:
+      - scenario_coverage
+      - scenario_execution
+      - scenario_execution_control
+      - scenario_execution_gazebo
+      - scenario_execution_interfaces
+      - scenario_execution_nav2
+      - scenario_execution_os
+      - scenario_execution_py_trees_ros
+      - scenario_execution_ros
+      - scenario_execution_rviz
+      - scenario_execution_x11
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/scenario_execution-release.git
+      version: 1.2.0-1
     source:
       type: git
       url: https://github.com/IntelLabs/scenario_execution.git
-      version: main
+      version: humble
     status: maintained
   schunk_svh_library:
     doc:
