--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1083,6 +1083,28 @@ repositories:
       url: https://github.com/PickNikRobotics/cpp_polyfills.git
       version: main
     status: maintained
+  create3_examples:
+    doc:
+      type: git
+      url: https://github.com/iRobotEducation/create3_examples.git
+      version: jazzy
+    release:
+      packages:
+      - create3_coverage
+      - create3_examples_msgs
+      - create3_examples_py
+      - create3_lidar_slam
+      - create3_republisher
+      - create3_teleop
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/create3_examples-release.git
+      version: 1.0.0-1
+    source:
+      type: git
+      url: https://github.com/iRobotEducation/create3_examples.git
+      version: jazzy
+    status: developed
   create3_sim:
     release:
       packages:
