talos_simulation: 2.0.0-1 in 'humble/distribution.yaml' [bloom] (#42966)

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -9823,6 +9823,19 @@ repositories:
       url: https://github.com/pal-robotics/talos_robot.git
       version: humble-devel
     status: developed
+  talos_simulation:
+    release:
+      packages:
+      - talos_gazebo
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/pal-gbp/talos_simulation-release.git
+      version: 2.0.0-1
+    source:
+      type: git
+      url: https://github.com/pal-robotics/talos_simulation.git
+      version: humble-devel
+    status: developed
   tango_icons_vendor:
     release:
       tags:
