Add source version

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -8590,6 +8590,7 @@ repositories:
     source:
       type: git
       url: https://github.com/turtlebot/turtlebot4_setup.git
+      version: jazzy
   turtlebot4_simulator:
     doc:
       type: git
