Add development status

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -8591,6 +8591,7 @@ repositories:
       type: git
       url: https://github.com/turtlebot/turtlebot4_setup.git
       version: jazzy
+    status: developed
   turtlebot4_simulator:
     doc:
       type: git
