--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -8577,6 +8577,21 @@ repositories:
       url: https://github.com/turtlebot/turtlebot4_robot.git
       version: jazzy
     status: developed
+  turtlebot4_setup:
+    doc:
+      type: git
+      url: https://github.com/turtlebot/turtlebot4_setup.git
+      version: jazzy
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/turtlebot4_setup-release.git
+      version: 2.0.0-1
+    source:
+      type: git
+      url: https://github.com/turtlebot/turtlebot4_setup.git
+      version: jazzy
+    status: developed
   turtlebot4_simulator:
     doc:
       type: git
