Switch around the cases here.
In particular, make this forward-compatible by using
a star for the newer distributions, and either pip or
null for the older ones.  This way it will work going
forward.

Signed-off-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8538,25 +8538,23 @@ python3-pyside2.qtwidgets:
   ubuntu: [python3-pyside2.qtwidgets]
 python3-pyside6:
   debian:
+    '*': [libpyside6-dev]
     bookworm:
       pip:
         packages: [PySide6]
     bullseye:
       pip:
         packages: [PySide6]
-    sid: [libpyside6-dev]
-    trixie: [libpyside6-dev]
+  fedora: [python3-pyside6]
   osx:
     pip:
       packages: [PySide6]
   rhel:
-    '8':
-      pip:
-        packages: [PySide6]
-    '9':
+    '*':
       pip:
         packages: [PySide6]
   ubuntu:
+    '*': [libpyside6-dev]
     focal:
       pip:
         packages: [PySide6]
@@ -8566,61 +8564,96 @@ python3-pyside6:
     noble:
       pip:
         packages: [PySide6]
-    oracular: [libpyside6-dev]
 python3-pyside6.qtasyncio:
   debian:
-    sid: [python3-pyside6.qtasyncio]
-    trixie: [python3-pyside6.qtasyncio]
+    '*': [python3-pyside6.qtasyncio]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qtasyncio]
+    '*': [python3-pyside6.qtasyncio]
+    noble: null
+    jammy: null
+    focal: null
 python3-pyside6.qtcharts:
   debian:
-    sid: [python3-pyside6.qtcharts]
-    trixie: [python3-pyside6.qtcharts]
+    '*': [python3-pyside6.qtcharts]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qtcharts]
+    '*': [python3-pyside6.qtcharts]
+    noble: null
+    jammy: null
+    focal: null
 python3-pyside6.qtconcurrent:
   debian:
-    sid: [python3-pyside6.qtconcurrent]
-    trixie: [python3-pyside6.qtconcurrent]
+    '*': [python3-pyside6.qtconcurrent]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qtconcurrent]
+    '*': [python3-pyside6.qtconcurrent]
+    noble: null
+    jammy: null
+    focal: null
 python3-pyside6.qtcore:
   debian:
-    sid: [python3-pyside6.qtcore]
-    trixie: [python3-pyside6.qtcore]
+    '*': [python3-pyside6.qtcore]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qtcore]
+    '*': [python3-pyside6.qtcore]
+    noble: null
+    jammy: null
+    focal: null
 python3-pyside6.qtdatavisualization:
   debian:
-    sid: [python3-pyside6.qtdatavisualization]
-    trixie: [python3-pyside6.qtdatavisualization]
+    '*': [python3-pyside6.qtdatavisualization]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qtdatavisualization]
+    '*': [python3-pyside6.qtdatavisualization]
+    noble: null
+    jammy: null
+    focal: null
 python3-pyside6.qtgui:
   debian:
-    sid: [python3-pyside6.qtgui]
-    trixie: [python3-pyside6.qtgui]
+    '*': [python3-pyside6.qtgui]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qtgui]
+    '*': [python3-pyside6.qtgui]
+    noble: null
+    jammy: null
+    focal: null
 python3-pyside6.qtqml:
   debian:
-    sid: [python3-pyside6.qtqml]
-    trixie: [python3-pyside6.qtqml]
+    '*': [python3-pyside6.qtqml]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qtqml]
+    '*': [python3-pyside6.qtqml]
+    noble: null
+    jammy: null
+    focal: null
 python3-pyside6.qttest:
   debian:
-    sid: [python3-pyside6.qttest]
-    trixie: [python3-pyside6.qttest]
+    '*': [python3-pyside6.qttest]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qttest]
+    '*': [python3-pyside6.qttest]
+    noble: null
+    jammy: null
+    focal: null
 python3-pyside6.qtwidgets:
   debian:
-    sid: [python3-pyside6.qtwidgets]
-    trixie: [python3-pyside6.qtwidgets]
+    '*': [python3-pyside6.qtwidgets]
+    bookworm: null
+    bullseye: null
   ubuntu:
-    oracular: [python3-pyside6.qtwidgets]
+    '*': [python3-pyside6.qtwidgets]
+    noble: null
+    jammy: null
+    focal: null
 python3-pysnmp:
   debian: [python3-pysnmp4]
   fedora: [python3-pysnmp]
