Add exception for Fedora 39.
Signed-off-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8545,7 +8545,9 @@ python3-pyside6:
     bullseye:
       pip:
         packages: [PySide6]
-  fedora: [python3-pyside6]
+  fedora:
+    '*': [python3-pyside6]
+    '39': null
   osx:
     pip:
       packages: [PySide6]
