--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8573,6 +8573,9 @@ python3-pyside6.qtasyncio:
     bullseye: null
   ubuntu:
     '*': [python3-pyside6.qtasyncio]
+    focal: null
+    jammy: null
+    noble: null
 python3-pyside6.qtcharts:
   debian:
     '*': [python3-pyside6.qtcharts]
