Add PySide6 to rosdep keys (#42353)
* Added PySide6 with pip.

* Removed incorrectly added quotation marks.

* Scoped PySide6 to specific OSes and versions.

* Fixed alphabetical order.

* Add PySide6 system packages for Ubuntu Oracular & Debian Sid.

* Add trixie definitions for pyside6.

Trixie is the current testing distribution of Debian.

* https://packages.debian.org/trixie/python3-pyside6.qtasyncio
* https://packages.debian.org/trixie/python3-pyside6.qtcharts
* https://packages.debian.org/trixie/python3-pyside6.qtconcurrent
* https://packages.debian.org/trixie/python3-pyside6.qtcore
* https://packages.debian.org/trixie/python3-pyside6.qtdatavisualization
* https://packages.debian.org/trixie/python3-pyside6.qtgui
* https://packages.debian.org/trixie/python3-pyside6.qtqml
* https://packages.debian.org/trixie/python3-pyside6.qttest
* https://packages.debian.org/trixie/python3-pyside6.qtwidgets

* Change sort order.

I'd intentionally tried to keep these in release order rather than
lexicographical order but I forgot that the checker would dislike this.

* Switch around the cases here.

In particular, make this forward-compatible by using
a star for the newer distributions, and either pip or
null for the older ones.  This way it will work going
forward.

* Add exception for Fedora 39.

Signed-off-by: Chris Lalancette <clalancette@gmail.com>
Co-authored-by: Steven! Ragnarök <steven@nuclearsandwich.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8536,6 +8536,126 @@ python3-pyside2.qtwidgets:
     '*': [python3-pyside2]
     '8': null
   ubuntu: [python3-pyside2.qtwidgets]
+python3-pyside6:
+  debian:
+    '*': [libpyside6-dev]
+    bookworm:
+      pip:
+        packages: [PySide6]
+    bullseye:
+      pip:
+        packages: [PySide6]
+  fedora:
+    '*': [python3-pyside6]
+    '39': null
+  osx:
+    pip:
+      packages: [PySide6]
+  rhel:
+    '*':
+      pip:
+        packages: [PySide6]
+  ubuntu:
+    '*': [libpyside6-dev]
+    focal:
+      pip:
+        packages: [PySide6]
+    jammy:
+      pip:
+        packages: [PySide6]
+    noble:
+      pip:
+        packages: [PySide6]
+python3-pyside6.qtasyncio:
+  debian:
+    '*': [python3-pyside6.qtasyncio]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qtasyncio]
+    focal: null
+    jammy: null
+    noble: null
+python3-pyside6.qtcharts:
+  debian:
+    '*': [python3-pyside6.qtcharts]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qtcharts]
+    focal: null
+    jammy: null
+    noble: null
+python3-pyside6.qtconcurrent:
+  debian:
+    '*': [python3-pyside6.qtconcurrent]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qtconcurrent]
+    focal: null
+    jammy: null
+    noble: null
+python3-pyside6.qtcore:
+  debian:
+    '*': [python3-pyside6.qtcore]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qtcore]
+    focal: null
+    jammy: null
+    noble: null
+python3-pyside6.qtdatavisualization:
+  debian:
+    '*': [python3-pyside6.qtdatavisualization]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qtdatavisualization]
+    focal: null
+    jammy: null
+    noble: null
+python3-pyside6.qtgui:
+  debian:
+    '*': [python3-pyside6.qtgui]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qtgui]
+    focal: null
+    jammy: null
+    noble: null
+python3-pyside6.qtqml:
+  debian:
+    '*': [python3-pyside6.qtqml]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qtqml]
+    focal: null
+    jammy: null
+    noble: null
+python3-pyside6.qttest:
+  debian:
+    '*': [python3-pyside6.qttest]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qttest]
+    focal: null
+    jammy: null
+    noble: null
+python3-pyside6.qtwidgets:
+  debian:
+    '*': [python3-pyside6.qtwidgets]
+    bookworm: null
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyside6.qtwidgets]
+    focal: null
+    jammy: null
+    noble: null
 python3-pysnmp:
   debian: [python3-pysnmp4]
   fedora: [python3-pysnmp]
