--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -9122,9 +9122,9 @@ repositories:
       version: humble
     release:
       packages:
-      - scenario_coverage
       - scenario_execution
       - scenario_execution_control
+      - scenario_execution_coverage
       - scenario_execution_gazebo
       - scenario_execution_interfaces
       - scenario_execution_nav2
@@ -9136,7 +9136,7 @@ repositories:
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/ros2-gbp/scenario_execution-release.git
-      version: 1.2.0-1
+      version: 1.2.0-2
     source:
       type: git
       url: https://github.com/IntelLabs/scenario_execution.git
