--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -8363,7 +8363,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: foxy
+      version: humble-devel
     release:
       tags:
         release: release/iron/{package}/{version}
@@ -8372,7 +8372,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: foxy
+      version: humble-devel
     status: developed
   ur_robot_driver:
     doc:
