Update upstream branches

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -8806,7 +8806,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: foxy
+      version: humble
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -8815,7 +8815,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: foxy
+      version: humble-devel
     status: developed
   ur_robot_driver:
     doc:
