--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -8363,7 +8363,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: humble-devel
+      version: humble
     release:
       tags:
         release: release/iron/{package}/{version}
