--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -8153,7 +8153,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: foxy
+      version: humble
     release:
       tags:
         release: release/rolling/{package}/{version}
@@ -8162,7 +8162,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: foxy
+      version: humble-devel
     status: developed
   ur_robot_driver:
     doc:
