--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -77,6 +77,11 @@ repositories:
       url: https://github.com/ros-acceleration/adaptive_component.git
       version: rolling
     status: developed
+  adi_3dtof_image_stitching:
+    source:
+      type: git
+      url: https://github.com/analogdevicesinc/adi_3dtof_image_stitching.git
+      version: humble-devel
   adi_tmcl:
     doc:
       type: git
