scenario_execution: 1.2.0-4 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7672,9 +7672,9 @@ repositories:
       version: jazzy
     release:
       packages:
-      - scenario_coverage
       - scenario_execution
       - scenario_execution_control
+      - scenario_execution_coverage
       - scenario_execution_gazebo
       - scenario_execution_interfaces
       - scenario_execution_nav2
@@ -7686,7 +7686,7 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/scenario_execution-release.git
-      version: 1.2.0-3
+      version: 1.2.0-4
     source:
       type: git
       url: https://github.com/IntelLabs/scenario_execution.git
