--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8294,7 +8294,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/RobotWebTools/rosbridge_suite.git
-      version: ros2
+      version: humble
     release:
       packages:
       - rosapi
@@ -8311,7 +8311,7 @@ repositories:
     source:
       type: git
       url: https://github.com/RobotWebTools/rosbridge_suite.git
-      version: ros2
+      version: humble
     status: developed
   rosidl:
     doc:
