--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -76,6 +76,11 @@ repositories:
       version: noetic-devel
     status: maintained
   adi_3dtof_image_stitching:
+    release:
+      tags:
+        release: release/noetic/{package}/{version}
+      url: https://github.com/raebelchristo-adi/adi_3dtof_image_stitching-release.git
+      version: 1.1.0-1
     source:
       type: git
       url: https://github.com/analogdevicesinc/adi_3dtof_image_stitching.git
