--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -2533,10 +2533,11 @@ repositories:
       - camera_info_manager
       - image_common
       - image_transport
+      - image_transport_py
       tags:
         release: release/rolling/{package}/{version}
       url: https://github.com/ros2-gbp/image_common-release.git
-      version: 6.0.0-1
+      version: 6.0.1-1
     source:
       test_pull_requests: true
       type: git
