--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7504,6 +7504,21 @@ repositories:
       url: https://github.com/RoboSense-LiDAR/rslidar_msg.git
       version: master
     status: maintained
+  rslidar_sdk:
+    doc:
+      type: git
+      url: https://github.com/RoboSense-LiDAR/rslidar_sdk.git
+      version: main
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/rslidar_sdk-release.git
+      version: 1.5.16-1
+    source:
+      type: git
+      url: https://github.com/RoboSense-LiDAR/rslidar_sdk.git
+      version: main
+    status: maintained
   rt_manipulators_cpp:
     doc:
       type: git
