Add python3-bloom to rosdep/python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5029,6 +5029,12 @@ python3-bitstring:
     '*': [python3-bitstring]
     '7': [python36-bitstring]
   ubuntu: [python3-bitstring]
+python3-bloom:
+  debian: [python3-bloom]
+  rhel:
+    '*': null
+    '8': [python3-bloom]
+  ubuntu: [python3-bloom]
 python3-bluerobotics-ping-pip:
   debian:
     pip:
