--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -812,6 +812,9 @@ dfu-util:
   gentoo: [app-mobilephone/dfu-util]
   nixos: [dfu-util]
   ubuntu: [dfu-util]
+dh-python:
+  debian: [dh-python]
+  ubuntu: [dh-python]
 disper:
   debian: [disper]
   nixos: [disper]
