Use pip for focal

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8775,7 +8775,11 @@ python3-pytest-order:
   nixos: [python3Packages.pytest-order]
   openembedded: [python3-pytest-order@meta-ros-common]
   opensuse: [python3-pytest-order]
-  ubuntu: [python3-pytest-order]
+  ubuntu:
+    '*': [python3-pytest-order]
+    focal:
+      pip:
+        packages: [pytest-order]
 python3-pytest-pylint:
   arch:
     pip:
