inuitive-camera-ros2: 2.07.81-2 in 'galactic/distribution.yaml' [bloom]

--- a/galactic/distribution.yaml
+++ b/galactic/distribution.yaml
@@ -1710,6 +1710,14 @@ repositories:
       url: https://github.com/ros-visualization/interactive_markers.git
       version: galactic
     status: maintained
+  inuitive-camera-ros2:
+    release:
+      packages:
+      - inuros2
+      tags:
+        release: release/galactic/{package}/{version}
+      url: git@bitbucket.org:inuitive/inuros2/branch/InuSW-inuitive-camera-galactic.git
+      version: 2.07.81-2
   irobot_create_msgs:
     release:
       tags:
