Implemented requested changes

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -589,11 +589,8 @@ clangd:
   gentoo: [sys-devel/clang]
   nixos: [clang]
   opensuse: [clang]
-  rhel:
-    '*': [clang-tools-extra]
-    '7': null
-  ubuntu:
-    '*': [clangd]
+  rhel: [clang-tools-extra]
+  ubuntu: [clangd]
 cmake:
   alpine: [cmake]
   arch: [cmake]
