Apply PR feedback

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8773,12 +8773,9 @@ python3-pytest-order:
   debian: [python3-pytest-order]
   gentoo: [dev-python/pytest-order]
   nixos: [python3Packages.pytest-order]
-  opensuse: [python3-pytest-order]
   ubuntu:
     '*': [python3-pytest-order]
-    focal:
-      pip:
-        packages: [pytest-order]
+    focal: null
 python3-pytest-pylint:
   arch:
     pip:
