--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -4036,11 +4036,15 @@ repositories:
       version: master
     status: maintained
   libfranka:
+    doc:
+      type: git
+      url: https://github.com/frankaemika/libfranka-release.git
+      version: release/foxy/libfranka
     release:
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/frankaemika/libfranka-release.git
-      version: 0.13.6-1
+      version: 0.14.2-1
     source:
       type: git
       url: https://github.com/frankaemika/libfranka.git
