--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -4039,11 +4039,11 @@ repositories:
     doc:
       type: git
       url: https://github.com/frankaemika/libfranka-release.git
-      version: release/foxy/libfranka
+      version: main
     release:
       tags:
         release: release/humble/{package}/{version}
-      url: https://github.com/frankaemika/libfranka-release.git
+      url: https://github.com/frankaemika/libfranka.git
       version: 0.14.2-1
     source:
       type: git
