Add clangd to rosdep/base.yaml (#43167)
* Add clangd to rosdep/base.yaml, add opensuse rosdep keys for clang-tidy and clang-format.

* Implemented requested changes

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -560,6 +560,7 @@ clang-format:
   fedora: [clang-tools-extra, git-clang-format]
   gentoo: [sys-devel/clang]
   nixos: [clang]
+  opensuse: [clang]
   osx:
     homebrew:
       packages: [clang-format]
@@ -574,11 +575,22 @@ clang-tidy:
   fedora: [clang-tools-extra]
   gentoo: [sys-devel/clang]
   nixos: [clang]
+  opensuse: [clang]
   rhel:
     '*': [clang-tools-extra]
     '7': null
   ubuntu:
     '*': [clang-tidy]
+clangd:
+  alpine: [clang-extra-tools]
+  arch: [clang]
+  debian: [clangd]
+  fedora: [clang-tools-extra]
+  gentoo: [sys-devel/clang]
+  nixos: [clang]
+  opensuse: [clang]
+  rhel: [clang-tools-extra]
+  ubuntu: [clangd]
 cmake:
   alpine: [cmake]
   arch: [cmake]
