--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -78,6 +78,10 @@ repositories:
       version: rolling
     status: developed
   adi_3dtof_image_stitching:
+    doc:
+      type: git
+      url: https://github.com/analogdevicesinc/adi_3dtof_image_stitching.git
+      version: humble-devel
     source:
       type: git
       url: https://github.com/analogdevicesinc/adi_3dtof_image_stitching.git
