--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -76,6 +76,10 @@ repositories:
       version: noetic-devel
     status: maintained
   adi_3dtof_image_stitching:
+    doc:
+      type: git
+      url: https://github.com/analogdevicesinc/adi_3dtof_image_stitching.git
+      version: noetic-devel
     release:
       tags:
         release: release/noetic/{package}/{version}
