--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -2653,7 +2653,8 @@ repositories:
       type: git
       url: https://github.com/cubicleguy/ess_imu_ros1_uart_driver.git
       version: main
-    status: unmaintained
+    status: end-of-life
+    status_description: Please upgrade to use package ess_imu_driver
   ethercat_grant:
     doc:
       type: git
