--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -2654,7 +2654,7 @@ repositories:
       url: https://github.com/cubicleguy/ess_imu_ros1_uart_driver.git
       version: main
     status: end-of-life
-    status_description: Please upgrade to use package ess_imu_driver
+    status_description: 'This is EOL. Please upgrade to use ess_imu_driver'
   ethercat_grant:
     doc:
       type: git
