etsi_its_messages: 2.3.0-1 in 'noetic/distribution.yaml' [bloom] (#43201)

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -2699,10 +2699,13 @@ repositories:
       - etsi_its_msgs_utils
       - etsi_its_primitives_conversion
       - etsi_its_rviz_plugins
+      - etsi_its_vam_ts_coding
+      - etsi_its_vam_ts_conversion
+      - etsi_its_vam_ts_msgs
       tags:
         release: release/noetic/{package}/{version}
       url: https://github.com/ika-rwth-aachen/etsi_its_messages-release.git
-      version: 2.2.0-1
+      version: 2.3.0-1
     source:
       type: git
       url: https://github.com/ika-rwth-aachen/etsi_its_messages.git
