python3-piexif: added python3 dependency

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7791,6 +7791,11 @@ python3-pickleDB-pip:
   ubuntu:
     pip:
       packages: [pickleDB]
+python3-piefix:
+  arch: [python-piexif]
+  debian: [python3-piefix]
+  fedora: [python3-piexif]
+  ubuntu: [python3-piefix]
 python3-pika:
   debian: [python3-pika]
   fedora: [python3-pika]
