--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7791,11 +7791,11 @@ python3-pickleDB-pip:
   ubuntu:
     pip:
       packages: [pickleDB]
-python3-piefix:
+python3-piexif:
   arch: [python-piexif]
-  debian: [python3-piefix]
+  debian: [python3-piexif]
   fedora: [python3-piexif]
-  ubuntu: [python3-piefix]
+  ubuntu: [python3-piexif]
 python3-pika:
   debian: [python3-pika]
   fedora: [python3-pika]
