--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7795,6 +7795,7 @@ python3-piexif:
   arch: [python-piexif]
   debian: [python3-piexif]
   fedora: [python3-piexif]
+  opensuse: [python3-piexif]
   ubuntu: [python3-piexif]
 python3-pika:
   debian: [python3-pika]
