--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -9232,15 +9232,13 @@ xsltproc:
   nixos: [libxslt]
   ubuntu: [xsltproc]
 xtensor:
+  debian: [libxtensor-dev]
   fedora: [xtensor-devel]
   nixos: [xtensor]
   rhel:
     '*': [xtensor-devel]
     '8': null
-  ubuntu:
-    bionic: [xtensor-dev]
-    jammy: [libxtensor-dev]
-    noble: [libxtensor-dev]
+  ubuntu: [libxtensor-dev]
 xterm:
   arch: [xterm]
   debian: [xterm]
