eol ess_imu_ros1_uart_driver on noetic (#43236)

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -2657,7 +2657,8 @@ repositories:
       type: git
       url: https://github.com/cubicleguy/ess_imu_ros1_uart_driver.git
       version: main
-    status: unmaintained
+    status: end-of-life
+    status_description: This is deprecated. Please use ess_imu_driver (See https://wiki.ros.org/ess_imu_driver)
   ethercat_grant:
     doc:
       type: git
