Set the focal xtensor key to null since it is not available.
Signed-off-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -9238,7 +9238,9 @@ xtensor:
   rhel:
     '*': [xtensor-devel]
     '8': null
-  ubuntu: [libxtensor-dev]
+  ubuntu:
+    '*': [libxtensor-dev]
+    focal: null
 xterm:
   arch: [xterm]
   debian: [xterm]
