create3_sim: 3.0.4-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1106,6 +1106,10 @@ repositories:
       version: jazzy
     status: developed
   create3_sim:
+    doc:
+      type: git
+      url: https://github.com/iRobotEducation/create3_sim.git
+      version: jazzy
     release:
       packages:
       - irobot_create_common_bringup
@@ -1120,7 +1124,7 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/create3_sim-release.git
-      version: 3.0.3-1
+      version: 3.0.4-1
     source:
       type: git
       url: https://github.com/iRobotEducation/create3_sim.git
