--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5769,6 +5769,9 @@ python3-events-pip:
   ubuntu:
     pip:
       packages: [Events]
+python3-expiringdict:
+  debian: [python3-expiringdict]
+  ubuntu: [python3-expiringdict]
 python3-ezdxf:
   debian:
     '*': [python3-ezdxf]
