--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6214,6 +6214,7 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/rmw_gurumdds-release.git
+      version: 5.0.0-1
     source:
       type: git
       url: https://github.com/ros2/rmw_gurumdds.git
