--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1128,7 +1128,7 @@ repositories:
     source:
       type: git
       url: https://github.com/iRobotEducation/create3_sim.git
-      version: main
+      version: jazzy
     status: developed
   cudnn_cmake_module:
     doc:
