extrinsic_calibrator_added

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2228,6 +2228,23 @@ repositories:
       url: https://github.com/ros2/examples.git
       version: humble
     status: maintained
+  extrinsic_calibrator:
+    doc:
+      type: git
+      url: https://github.com/Ikerlan-KER/extrinsic_calibrator.git
+      version: v1.0
+    release:
+      packages:
+      - extrinsic_calibrator_core
+      - extrinsic_calibrator_examples
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/Ikerlan-KER/extrinsic_calibrator/releases/tag/v1.0
+      version: v1.0
+    source:
+      type: git
+      url: https://github.com/Ikerlan-KER/extrinsic_calibrator.git
+    status: maintained
   fadecandy_ros:
     doc:
       type: git
