Add rhel key for libcap

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3132,6 +3132,7 @@ libcap-dev:
   nixos: [libcap]
   openembedded: [libcap@openembedded-core]
   opensuse: [libcap-devel]
+  rhel: [libcap-devel]
   ubuntu: [libcap-dev]
 libcap-ng-dev:
   arch: [libcap-ng]
