Add pytest-order (#43190)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8774,6 +8774,14 @@ python3-pytest-mock:
       packages: [pytest-mock]
   rhel: ['python%{python3_pkgversion}-pytest-mock']
   ubuntu: [python3-pytest-mock]
+python3-pytest-order:
+  arch: [python-pytest-order]
+  debian: [python3-pytest-order]
+  gentoo: [dev-python/pytest-order]
+  nixos: [python3Packages.pytest-order]
+  ubuntu:
+    '*': [python3-pytest-order]
+    focal: null
 python3-pytest-pylint:
   arch:
     pip:
