Add possibility of running action manually
Signed-off-by: Øystein Sture <oysstu@users.noreply.github.com>

--- a/.github/workflows/release_cache.yaml
+++ b/.github/workflows/release_cache.yaml
@@ -3,6 +3,7 @@
 name: release-cache
 
 on:  # yamllint disable-line rule:truthy
+  workflow_dispatch:
   push:
     tags:
     - '**'  # Double ** needed to match tags containing '/'
