--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1853,6 +1853,16 @@ repositories:
       url: https://github.com/ros2/domain_bridge.git
       version: humble
     status: developed
+  dual_laser_merger:
+    doc:
+      type: git
+      url: https://github.com/pradyum/dual_laser_merger.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/pradyum/dual_laser_merger.git
+      version: humble
+    status: developed
   dynamixel_hardware:
     doc:
       type: git
