--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -1195,6 +1195,16 @@ repositories:
       url: https://github.com/ros2/domain_bridge.git
       version: main
     status: developed
+  dual_laser_merger:
+    doc:
+      type: git
+      url: https://github.com/pradyum/dual_laser_merger.git
+      version: rolling
+    source:
+      type: git
+      url: https://github.com/pradyum/dual_laser_merger.git
+      version: rolling
+    status: developed
   dynamixel_hardware:
     doc:
       type: git
