--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1373,6 +1373,16 @@ repositories:
       url: https://github.com/ros2/domain_bridge.git
       version: main
     status: developed
+  dual_laser_merger:
+    doc:
+      type: git
+      url: https://github.com/pradyum/dual_laser_merger.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/pradyum/dual_laser_merger.git
+      version: jazzy
+    status: developed
   dynamixel_hardware:
     doc:
       type: git
