Fix xtensor key for Debian and Ubuntu. (#43254)
* Fix xtensor key for Debian and Ubuntu.

Signed-off-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -9236,15 +9236,15 @@ xsltproc:
   nixos: [libxslt]
   ubuntu: [xsltproc]
 xtensor:
+  debian: [libxtensor-dev]
   fedora: [xtensor-devel]
   nixos: [xtensor]
   rhel:
     '*': [xtensor-devel]
     '8': null
   ubuntu:
-    bionic: [xtensor-dev]
-    jammy: [libxtensor-dev]
-    noble: [libxtensor-dev]
+    '*': [libxtensor-dev]
+    focal: null
 xterm:
   arch: [xterm]
   debian: [xterm]
