--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2526,6 +2526,7 @@ lensfun-dev:
   fedora: [lensfun-devel]
   gentoo: [media-libs/lensfun]
   nixos: [lensfun]
+  opensuse: [lensfun-devel]
   rhel: [lensfun-devel]
   ubuntu: [liblensfun-dev]
 leveldb:
