--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6881,7 +6881,9 @@ python3-lensfun:
   gentoo: ['media-libs/lensfun[python]']
   nixos: [lensfun]
   opensuse: [python3-lensfun]
-  rhel: [python3-lensfun]
+  rhel:
+    '*': [python3-lensfun]
+    '8': null
   ubuntu: [python3-lensfun]
 python3-lgpio:
   alpine:
