rosdep: Added exiv2-dev

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1023,6 +1023,18 @@ exiv2:
       packages: [exiv2]
   rhel: [exiv2]
   ubuntu: [exiv2]
+exiv2-dev:
+  alpine: [exiv2-dev]
+  arch: [exiv2]
+  debian: [libexiv2-dev]
+  fedora: [exiv2-devel]
+  gentoo: [media-gfx/exiv2]
+  nixos: [exiv2]
+  osx:
+    homebrew:
+      packages: [exiv2]
+  rhel: [exiv2-devel]
+  ubuntu: [libexiv2-dev]
 f2c:
   debian: [f2c, libf2c2, libf2c2-dev]
   fedora: [f2c, f2c-libs]
