Add load_balancing_service to rosdistro
Signed-off-by: Barry Xu <barry.xu@sony.com>

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -3208,6 +3208,12 @@ repositories:
       url: https://github.com/adityapande-1995/linux_isolate_process.git
       version: main
     status: maintained
+  load_balancing_service:
+    source:
+      type: git
+      url: https://github.com/Barry-Xu-2018/ros2_load_balancing_service.git
+      version: main
+    status: developed
   log_view:
     doc:
       type: git
