Add rosdep key for rich (#43386)
* Add rich

* Add other distros

* Fix focal

* Support rhel

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9083,6 +9083,21 @@ python3-retrying:
     pip:
       packages: [retrying]
   ubuntu: [python3-retrying]
+python3-rich:
+  debian: [python3-rich]
+  fedora: [python3-rich]
+  gentoo: [rich]
+  osx:
+    pip:
+      packages: [rich]
+  rhel:
+    '*': [python3-rich]
+    '8': null
+  ubuntu:
+    '*': [python3-rich]
+    focal:
+      pip:
+        packages: [rich]
 python3-river-pip:
   debian:
     pip:
