Add rosdep key for minijinja (#43391)
* Add minijinja

* Address review

* Fix noble

* Fix

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7091,6 +7091,32 @@ python3-meson-pip:
   ubuntu:
     pip:
       packages: [meson]
+python3-minijinja:
+  debian:
+    '*': [librust-minijinja-dev]
+    bookworm:
+      pip:
+        packages: [minijinja]
+    bullseye:
+      pip:
+        packages: [minijinja]
+    buster:
+      pip:
+        packages: [minijinja]
+  osx:
+    pip:
+      packages: [minijinja]
+  ubuntu:
+    '*': [librust-minijinja-dev]
+    focal:
+      pip:
+        packages: [minijinja]
+    jammy:
+      pip:
+        packages: [minijinja]
+    noble:
+      pip:
+        packages: [minijinja]
 python3-minimalmodbus-pip:
   debian:
     pip:
