rosdep: exiv2-dev: Added opensuse key

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1030,6 +1030,7 @@ exiv2-dev:
   fedora: [exiv2-devel]
   gentoo: [media-gfx/exiv2]
   nixos: [exiv2]
+  opensuse: [libexiv2-devel]
   osx:
     homebrew:
       packages: [exiv2]
