Add rosbag2_to_video to rolling index (#42555)

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -6416,6 +6416,16 @@ repositories:
       version: master
     status_description: Maintained in source form only since no ROS 1 packages available
       in Rolling
+  rosbag2_to_video:
+    doc:
+      type: git
+      url: https://github.com/fictionlab/rosbag2_to_video.git
+      version: rolling
+    source:
+      type: git
+      url: https://github.com/fictionlab/rosbag2_to_video.git
+      version: rolling
+    status: maintained
   rosbridge_suite:
     doc:
       type: git
