add clips_vendor to index of current distros (#43450)
* add clips_vendor to index of current distros

* fix formatting issue for clips_vendor in humble

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1355,6 +1355,12 @@ repositories:
       url: https://github.com/clearpathrobotics/clearpath_simulator.git
       version: main
     status: developed
+  clips_vendor:
+    source:
+      type: git
+      url: https://github.com/carologistics/clips_vendor.git
+      version: main
+    status: maintained
   cob_common:
     doc:
       type: git
