Update distribution.yaml - Add franka_ros2

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2641,6 +2641,12 @@ repositories:
       url: https://github.com/frankaemika/franka_description.git
       version: main
     status: developed
+  franka_ros2:
+    source:
+      type: git
+      url: https://github.com/frankaemika/franka_ros2
+      version: main
+      status: developed
   game_controller_spl:
     doc:
       type: git
