dep: `libwebp-tools` (#43326)
* dep: webp

Signed-off-by: Isaac Saito <iisaac.saito@gmail.com>

* dep: libwebp-tools: Renamed from 'webp' per suggestion https://github.com/ros/rosdistro/pull/43326#issuecomment-2452306585

Signed-off-by: Isaac Saito <iisaac.saito@gmail.com>

* dep: libwebp-tools: Fix rhel

Co-authored-by: Scott K Logan <logans@cottsay.net>

---------

Signed-off-by: Isaac Saito <iisaac.saito@gmail.com>
Co-authored-by: Scott K Logan <logans@cottsay.net>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6545,6 +6545,18 @@ libwebp-dev:
   nixos: [libwebp]
   openembedded: [libwebp@openembedded-core]
   ubuntu: [libwebp-dev]
+libwebp-tools:
+  alpine: [libwebp-tools]
+  debian: [webp]
+  fedora: [libwebp-tools]
+  opensuse: [libwebp-tools]
+  osx:
+    homebrew:
+      packages: [webp]
+  rhel:
+    '*': [libwebp-tools]
+    '8': null
+  ubuntu: [webp]
 libwebsocketpp-dev:
   arch: [websocketpp]
   debian: [libwebsocketpp-dev]
