rosdep: Added lensfun, lensfun-dev and python3-lensfun (#43462)
* rosdep: Added lensfun, lensfun-dev and python3-lensfun

* Fixup

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -2509,6 +2509,26 @@ lcov:
   opensuse: [lcov]
   rhel: [lcov]
   ubuntu: [lcov]
+lensfun:
+  alpine: [lensfun]
+  arch: [lensfun]
+  debian: [liblensfun1]
+  fedora: [lensfun]
+  gentoo: [media-libs/lensfun]
+  nixos: [lensfun]
+  opensuse: [liblensfun1]
+  rhel: [lensfun]
+  ubuntu: [liblensfun1]
+lensfun-dev:
+  alpine: [lensfun-dev]
+  arch: [lensfun]
+  debian: [liblensfun-dev]
+  fedora: [lensfun-devel]
+  gentoo: [media-libs/lensfun]
+  nixos: [lensfun]
+  opensuse: [lensfun-devel]
+  rhel: [lensfun-devel]
+  ubuntu: [liblensfun-dev]
 leveldb:
   arch: [leveldb]
   debian: [libleveldb-dev]
