--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6873,6 +6873,18 @@ python3-lark-parser:
   ubuntu:
     '*': [python3-lark]
     bionic: [python3-lark-parser]
+python3-lensfun:
+  alpine: [py3-lensfun]
+  arch: [lensfun]
+  debian: [python3-lensfun]
+  fedora: [python3-lensfun]
+  gentoo: ['media-libs/lensfun[python]']
+  nixos: [lensfun]
+  opensuse: [python3-lensfun]
+  rhel:
+    '*': [python3-lensfun]
+    '8': null
+  ubuntu: [python3-lensfun]
 python3-lgpio:
   alpine:
     pip:
