Add nanobind, an alternative to pybind11 (#43327)
* Add nanobind, an alternative to pybind11

* Move from python.yaml to base.yaml and add missing distros

* Remove unwanted lines

Co-authored-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7287,6 +7287,22 @@ muparser:
   nixos: [muparser]
   opensuse: [muparser-devel]
   ubuntu: [libmuparser-dev]
+nanobind-dev:
+  arch: [nanobind]
+  debian:
+    '*': [nanobind-dev]
+    bookworm:
+      pip:
+        packages: [nanobind]
+  freebsd: [nanobind]
+  ubuntu:
+    '*': [nanobind-dev]
+    focal:
+      pip:
+        packages: [nanobind]
+    jammy:
+      pip:
+        packages: [nanobind]
 nanoflann:
   debian:
     '*': [libnanoflann-dev]
