Adding docs for YASMIN

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -11381,6 +11381,10 @@ repositories:
       version: humble
     status: maintained
   yasmin:
+    doc:
+      type: git
+      url: https://github.com/uleroboticsgroup/yasmin.git
+      version: main
     source:
       type: git
       url: https://github.com/uleroboticsgroup/yasmin.git
