--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -8948,6 +8948,10 @@ repositories:
       version: iron
     status: maintained
   yasmin:
+    doc:
+      type: git
+      url: https://github.com/uleroboticsgroup/yasmin.git
+      version: main
     source:
       type: git
       url: https://github.com/uleroboticsgroup/yasmin.git
