--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -9469,6 +9469,10 @@ repositories:
       version: jazzy
     status: maintained
   yasmin:
+    doc:
+      type: git
+      url: https://github.com/uleroboticsgroup/yasmin.git
+      version: main
     source:
       type: git
       url: https://github.com/uleroboticsgroup/yasmin.git
