--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -8766,6 +8766,10 @@ repositories:
       version: rolling
     status: maintained
   yasmin:
+    doc:
+      type: git
+      url: https://github.com/uleroboticsgroup/yasmin.git
+      version: main
     source:
       type: git
       url: https://github.com/uleroboticsgroup/yasmin.git
