Add python3-ollama-pip to rosdistro (#43482)
Signed-off-by: Barry Xu <barry.xu@sony.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7541,6 +7541,19 @@ python3-odrive-pip:
   ubuntu:
     pip:
       packages: [odrive]
+python3-ollama-pip:
+  debian:
+    pip:
+      packages: [ollama]
+  fedora:
+    pip:
+      packages: [ollama]
+  rhel:
+    pip:
+      packages: [ollama]
+  ubuntu:
+    pip:
+      packages: [ollama]
 python3-onnxruntime-gpu-pip:
   arch:
     pip:
