extrinsic_calibrator: in 'humble/distribution.yaml' (#43284)
* added extrinsic_calibrator

* release deleted

* Update distribution.yaml version: humble

---------

Co-authored-by: Ander González Tomé <andergonzaleztome@gmail.com>

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2244,6 +2244,16 @@ repositories:
       url: https://github.com/ros2/examples.git
       version: humble
     status: maintained
+  extrinsic_calibrator:
+    doc:
+      type: git
+      url: https://github.com/Ikerlan-KER/extrinsic_calibrator.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/Ikerlan-KER/extrinsic_calibrator.git
+      version: humble
+    status: maintained
   fadecandy_ros:
     doc:
       type: git
