rosdep: Added libexiv2-dev (#43463)
* rosdep: Added exiv2-dev

* rosdep: exiv2-dev: Added opensuse key

* rosdep: renamed exiv2-devnto libexiv2-dev

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3556,6 +3556,19 @@ libexif-dev:
       packages: [libexif]
   rhel: [libexif-devel]
   ubuntu: [libexif-dev]
+libexiv2-dev:
+  alpine: [exiv2-dev]
+  arch: [exiv2]
+  debian: [libexiv2-dev]
+  fedora: [exiv2-devel]
+  gentoo: [media-gfx/exiv2]
+  nixos: [exiv2]
+  opensuse: [libexiv2-devel]
+  osx:
+    homebrew:
+      packages: [exiv2]
+  rhel: [exiv2-devel]
+  ubuntu: [libexiv2-dev]
 libexpat1-dev:
   arch: [expat]
   debian: [libexpat1-dev]
